# buddha

./: .gitignore  CMakeLists.txt  buddha.cpp
algorithm/: CMakeLists.txt
algorithm/algorithm_base/: CMakeLists.txt  algorithm_base.cpp  algorithm_base.h
algorithm/algorithm_derived/: CMakeLists.txt
base/: base.h
cmake/: marco.cmake
module/: CMakeLists.txt
module/module_ai_pointer/: CMakeLists.txt  module_ai_pointer.cpp  module_ai_pointer.h
module/module_class_utils/: CMakeLists.txt  module_class_utils.cpp  module_class_utils.h
module/module_coding_tools/: CMakeLists.txt  module_coding_tools.cpp  module_coding_tools.h
module/module_image_tools/: CMakeLists.txt  module_image_tools.cpp  module_image_tools.h
module/module_information/: CMakeLists.txt  module_information.cpp  module_information.h
module/module_memory_pool/: CMakeLists.txt  module_memory_pool.cpp  module_memory_pool.h
module/module_meta_program/: CMakeLists.txt  module_meta_program.cpp  module_meta_program.h
module/module_new_feature/: CMakeLists.txt  module_new_feature.cpp  module_new_feature.h
module/module_path_walker/: CMakeLists.txt  module_path_walker.cpp  module_path_walker.h
module/module_refer_count/: CMakeLists.txt  module_refer_count.cpp  module_refer_count.h
module/module_reflection/: CMakeLists.txt  module_reflection.cpp  module_reflection.h
module/module_stl_algorithm/: CMakeLists.txt  module_stl_algorithm.cpp  module_stl_algorithm.h
module/module_thread_pool/: CMakeLists.txt  module_thread_pool.cpp  module_thread_pool.h
module/module_time_clock/: CMakeLists.txt  module_time_clock.cpp  module_time_clock.h
note/: SingletonPattern.md  base_note.md  class_note.md  cmake.md  cmake_note.md  configuration.md  filesystem_note.md  issue_note.md  memory_note.md  template_note.md  thread_note.md  todo.md  vim_note.md
pattern/: CMakeLists.txt
pattern/pattern_factory_pattern/: CMakeLists.txt  pattern_factory_pattern.cpp  pattern_factory_pattern.h
pattern/pattern_iterator_pattern/: CMakeLists.txt  pattern_iterator_pattern.cpp  pattern_iterator_pattern.h
pattern/pattern_singleton_pattern/: CMakeLists.txt  pattern_singleton_pattern.cpp  pattern_singleton_pattern.h
request/: CMakeLists.txt
request/algorithm_base/: CMakeLists.txt
request/algorithm_derived/: CMakeLists.txt  algorithm_derived.cpp  algorithm_derived.h
tools/: CMakeLists.txt  wong_mat.natvis
